<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trium Tracker</string>
    <string name="stop">STOP</string>

    <string name="add_title">Add Character</string>
    <string name="delete_title">Delete Characters</string>
    <string name="delete_all_title">Delete All Characters</string>

    <string name="actor_name_hint">Name</string>
    <string name="player_name_hint">Player name (optional)</string>
    <string name="party">Party</string>
    <string name="ally">Ally</string>
    <string name="neutral">Neutral</string>
    <string name="enemy">Enemy</string>
    <string name="danger">Danger</string>

    <string name="init_hint">New initiative</string>

    <string name="crit_hit">Critical Hit</string>
    <string name="crit_miss">Critical Miss</string>

</resources>
