<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/character_name_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:hint="@string/actor_name_hint" />

    <EditText
        android:id="@+id/player_name_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:hint="@string/player_name_hint" />

    <RadioGroup
        android:id="@+id/radio_disposition"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:checkedButton="@+id/radio_party">
        <RadioButton
            android:id="@+id/radio_party"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/party"/>
        <RadioButton
            android:id="@+id/radio_ally"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ally"/>
        <RadioButton
            android:id="@+id/radio_neutral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/neutral"/>
        <RadioButton
            android:id="@+id/radio_enemy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enemy"/>
        <RadioButton
            android:id="@+id/radio_danger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/danger"/>

    </RadioGroup>

</LinearLayout>