<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TriumTracker" >

    <item
        android:id="@+id/action_new"
        android:title="@string/add_title"
        android:icon="@drawable/ic_add_white_36dp"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_discard"
        android:title="@string/delete_title"
        android:icon="@drawable/ic_clear_white_36dp"
        android:orderInCategory="100"/>

    <item
        android:id="@+id/action_discard_all"
        android:title="@string/delete_all_title"
        android:icon="@drawable/ic_clear_white_36dp"
        android:orderInCategory="100"/>

</menu>
