<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/new_init"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/init_hint"
        android:inputType="number"/>

    <RadioGroup
        android:id="@+id/radio_crit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/radio_crit_hit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crit_hit"/>
        <RadioButton
            android:id="@+id/radio_crit_miss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crit_miss"/>
    </RadioGroup>

</LinearLayout>